[package]
name = "zpki"
version = "0.1.0"
edition = "2024"
authors = ["Zisraw"]
license = "Apache-2.0"
description = "A simple CLI tool for generating certificates with CA management"
readme = "README.md"
keywords = ["pki", "certificate", "tls", "ca"]
categories = ["command-line-utilities", "certificate"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
rand = "0.9.2"
rcgen = { version = "0.14.5", features = ["pem", "x509-parser"]}
time = "0.3.44"

[dev-dependencies]
tempfile = "3.23.0"
